syntax = "proto3";

package iots.temperature.srv.AirConditioner;

service AirConditioner {
    rpc SetDeviceStatus(DeviceStatus) returns (Empty) {}
    rpc GetDeviceStatus(Empty) returns (DeviceStatus) {}

}

message DeviceStatus{
    bool PowerOn =  1;
    bool HeatingMode = 2;
    int32 Power = 3;
    bool AutoMode = 4;
    int64 DesiredTemp = 5;
}

message Empty {

}